--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="text-[.8em]">
           <div class="flex justify-between text-[] bg-red-100 rounded-2xl p-3 mb-4">
             <span class="font-bold text-red-500 flex">
-              <img src="../assets/images/icon-reaction.svg" class="mr-1" alt="">
+              <img src="./assets/images/icon-reaction.svg" class="mr-1" alt="">
               <span id="nome1"></span>
             </span>
             <span class="text-gray-600">
@@ -59,7 +59,7 @@
           </div>
           <div class="flex justify-between text-[] bg-yellow-100 rounded-2xl p-3 mb-4">
             <span class="font-bold text-yellow-500 flex">
-              <img src="../assets/images/icon-memory.svg" class="mr-1" alt="">
+              <img src="./assets/images/icon-memory.svg" class="mr-1" alt="">
               Memory
             </span>
             <span class="text-gray-600">
@@ -71,7 +71,7 @@
           </div>
           <div class="flex justify-between text-[] bg-green-200 rounded-2xl p-3 mb-4">
             <span class="font-bold text-green-500 flex">
-              <img src="../assets/images/icon-verbal.svg" class="mr-1" alt="">
+              <img src="./assets/images/icon-verbal.svg" class="mr-1" alt="">
               Verbal
             </span>
             <span class="text-gray-600">
@@ -83,7 +83,7 @@
           </div>
           <div class="flex justify-between text-[] bg-violet-200 rounded-2xl p-3 mb-4">
             <span class="font-bold text-violet-800 flex">
-              <img src="../assets/images/icon-visual.svg" class="mr-1" alt="">
+              <img src="./assets/images/icon-visual.svg" class="mr-1" alt="">
               Visual
             </span>
             <span class="text-gray-600">
